--- a/part-1/2-1/task-2/index.html
+++ b/part-1/2-1/task-2/index.html
@@ -3,13 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>2-1 • Задача 1</title>
+	<title>2-1 • Задача 2</title>
 </head>
 
 <body>
-	<script>
-    alert('Я JavaScript!'); 
-  </script>
+	<script src="script.js"></script>
 </body>
 
 </html>
